--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server/index.js",
+    "build": "cd client && npm run build",
+    "client": "cd client && npm run dev",
+    "server": "cd server && npm start"
+
   },
   "keywords": [],
   "author": "",
